--- a/oct11.html
+++ b/oct11.html
@@ -28,7 +28,7 @@
     </div>
     <div class="inner">
         <h3>headline-3</h3>
-        <p>paragraph-3</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus natus, magni ratione nobis vel eius illum, beatae cum inventore incidunt molestias eveniet officia sunt voluptas voluptatem culpa maiores doloribus quaerat quasi! Alias magnam, officia, ea laborum error velit ratione magni cupiditate sunt eos quibusdam a dolorum odit, facilis corrupti quas! Quae est atque suscipit at blanditiis, soluta incidunt rerum ipsa.</p>
     </div>
 </div>
 
